Fix stage header expanding too much on small screens

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
 
 .stage-info {
     width: 58.3vh;
+    max-width: 100%;
     margin-bottom: 24px;
 }
 
